; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_memory.c_MEMORY_Cart809fEnable.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_memory.c_MEMORY_Cart809fEnable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@cart809F_enabled = common dso_local global i64 0, align 8
@MEMORY_ram_size = common dso_local global i32 0, align 4
@under_cart809F = common dso_local global i32 0, align 4
@MEMORY_mem = common dso_local global i64 0, align 8
@TRUE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @MEMORY_Cart809fEnable() #0 {
  %1 = load i64, i64* @cart809F_enabled, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %14, label %3

3:                                                ; preds = %0
  %4 = load i32, i32* @MEMORY_ram_size, align 4
  %5 = icmp sgt i32 %4, 32
  br i1 %5, label %6, label %12

6:                                                ; preds = %3
  %7 = load i32, i32* @under_cart809F, align 4
  %8 = load i64, i64* @MEMORY_mem, align 8
  %9 = add nsw i64 %8, 32768
  %10 = call i32 @memcpy(i32 %7, i64 %9, i32 8192)
  %11 = call i32 @MEMORY_SetROM(i32 32768, i32 40959)
  br label %12

12:                                               ; preds = %6, %3
  %13 = load i64, i64* @TRUE, align 8
  store i64 %13, i64* @cart809F_enabled, align 8
  br label %14

14:                                               ; preds = %12, %0
  ret void
}

declare dso_local i32 @memcpy(i32, i64, i32) #1

declare dso_local i32 @MEMORY_SetROM(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
